# motorized_rotation_stage

./: .gitignore  README.md  example_api_usage.py  pyproject.toml  start_rotation_stage.bat
docs/: arcitecture.md  firmware.md  mission.md  pc_app.md  protocol.md  requirements.md  shared_communication_server.md  tasks.md
firmware/: platformio.ini
firmware/src/: main.cpp
pc_app/: __init__.py
pc_app/api/: __init__.py  rotation_stage_api.py  telemetry_models.py
pc_app/comm/: __init__.py  communication_manager.py  models.py  port_detection.py  protocol.py  remote_client.py  remote_protocol.py  remote_server.py  server_app.py  telemetry_bus.py
pc_app/sim/: __init__.py  controller_simulator.py
pc_app/ui/: __init__.py  control_panel.py  controller_interface.py  hardware_app.py  main_window.py  preview_app.py  reference_safety_panel.py  simulator_app.py  system_parameters_panel.py  telemetry_view.py  theme.py  tooltip.py
tests/: run_telemetry_fanout_demo.py  test_communication_manager_fanout.py  test_controller_simulator.py  test_main_window_startup.py  test_port_detection.py  test_protocol.py  test_remote_server.py  test_rotation_stage_api.py  test_telemetry_bus.py  test_ui_preview.py
ui_react/: README.md  index.html  preview.html
ui_react/src/: App.tsx  styles.css  types.ts
ui_react/src/components/: AppHeader.tsx  CommandPanel.tsx  Panel.tsx  StatusBanner.tsx  SystemConfigurationPanel.tsx  TelemetryPanel.tsx  ValueCard.tsx
ui_react/src/hooks/: useStageDashboard.ts
